# crab_vending_machine

./: CMakeLists.txt  upload.c
inc/: darray.h  error.h  expression.h  global.h  instruction.h  label.h  opcode.h  position.h  utility.h  word.h
src/: darray.c  error.c  expression.c  label.c  main.c  opcode.c  position.c  utility.c  word.c
